<!--
  ~
  ~ PROJECT LICENSE
  ~
  ~ This project was submitted by Jason Jamieson as part of the Android Kotlin Developer Nanodegree At Udacity.
  ~
  ~ As part of Udacity Honor code, your submissions must be of your own work.
  ~ Submission of this project will cause you to break the Udacity Honor Code
  ~ and possible suspension of your account.
  ~
  ~ I, Jason Jamieson, the author of the project, allow you to check this code as reference, but if
  ~ used as submission, it's your responsibility if you are expelled.
  ~
  ~ Copyright (c) 2021 Jason Jamieson
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>

    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id" translatable="false">download_status_channel</string>
    <string name="notification_channel_name" translatable="true">Download Status</string>

    <string name="check_the_status">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="filename">Filename:</string>
    <string name="status">Status:</string>
    <string name="cloud_icon_content_description">Cloud Icon for Download action</string>
    <string name="please_select_download_file_to_download">Please select the file to download</string>

    <string name="glide">Glide - Image Loading Library by Bumptech</string>
    <string name="udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="successful">Successful</string>
    <string name="failed">Failed</string>

</resources>
