<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ PROJECT LICENSE
  ~
  ~ This project was submitted by Jason Jamieson as part of the Android Kotlin Developer Nanodegree At Udacity.
  ~
  ~ As part of Udacity Honor code, your submissions must be of your own work.
  ~ Submission of this project will cause you to break the Udacity Honor Code
  ~ and possible suspension of your account.
  ~
  ~ I, Jason Jamieson, the author of the project, allow you to check this code as reference, but if
  ~ used as submission, it's your responsibility if you are expelled.
  ~
  ~ Copyright (c) 2021 Jason Jamieson
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mainCloudImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/cloud_icon_content_description"
            android:src="@drawable/ic_assistant_black_24dp"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/mainRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/custom_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainCloudImageView">

            <RadioButton
                android:id="@+id/mainRadioButtonGlide"
                style="@style/RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/glide" />

            <RadioButton
                android:id="@+id/mainRadioButtonUdacity"
                style="@style/RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/udacity" />

            <RadioButton
                android:id="@+id/mainRadioButtonRetrofit"
                style="@style/RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/retrofit" />

        </RadioGroup>

        <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="24dp"
            app:buttonColor="@color/colorPrimary"
            app:buttonProgressColor="@color/colorPrimaryDark"
            app:circleProgressColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainRadioGroup"
            app:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>